# metanalyst-agent-2

./: .env.example  .gitignore  LICENSE  README.md  TASK_COMPLETION_SUMMARY.md  cli.py  example_usage.py  pyproject.toml  requirements.txt  simple_validation.py  validate_framework.py
agents/: __init__.py  analyzer.py  processor.py  researcher.py  retriever.py  reviewer.py  supervisor.py  writer.py
data/current_draft/: current_draft.md
data/retrieved_chunks/: chunk_20250724_215743_522018_8403012f-63eb-4148-a8be-e151a5e8c5a6.json  chunk_20250724_215743_522935_5b371867-b3db-487c-bfc5-25ffcfedee9a.json  chunk_20250724_215743_523652_5e43f866-8b50-4d10-8f7d-5ec0958672fb.json  (+740 more)
data/urls/: processed_urls.json  (+1 more)
docs/: architecture.md  corrected_architecture.md  framework_overview.md  implementation_summary.md  setup.md
examples/: basic_usage.py
metanalyst/: __init__.py
prompts/: analyzer_agent_prompt.py  analyzer_prompt.py  processor_prompt.py  researcher_prompt.py  retriever_prompt.py  reviewer_prompt.py  supervisor_prompt.py  writer_prompt.py
src/: __init__.py
state/: state.py
tests/: __init__.py  agent_researcher_test.py  debug_vectorstore_structure.py  test_accumulative_state.py  test_basic_framework.py  test_complete_pipeline.py  test_literature_search_implementation.py  test_orchestrator.py  test_process_urls_direct.py  test_processor_100_urls.py  test_processor_debug.py  test_processor_debug_detailed.py  test_processor_fixed.py  test_processor_isolated.py  test_processor_limited.py  test_processor_limited_urls.py  test_processor_pipeline_debug.py  test_retriever_tool_isolated.py  test_state_update.py  test_tavily_debug.py
tools/: __init__.py  analyzer_agent_tools.py  process_urls.py  researcher_agent_tools.py  retriever_agent_tools.py  reviewer_tools.py  reviewer_tools_backup.py  supervisor_agent_tools.py  writer_agent_tools.py
utils/: url_manager.py
(+21 files in other folders)
